# data.source.coop

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  data-connections-dynamo.json  docker-compose.yml  wrangler.local.toml  wrangler.preview.toml  wrangler.toml
.cargo/: audit.toml  config.toml
.claude/: launch.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ci.yml  contract.yml  conventional-commits.yaml  deploy-api-proxy.yaml  deploy-location-ws.yml  deploy-public-log-stream.yml  deploy.yaml  deploy.yml  dev-deploy.yaml  docs.yaml  docs.yml  please-release.yaml  preview.yml  prod-deploy.yaml  production.yml  release.yaml  staging-deploy.yaml  staging.yml  test.yaml
adrs/: 001-s3-credentials.md  002-runtimes.md  003-rust.md  004-sts.md  005-authorization.md  006-outbound-storage.md  007-middleware.md  008-api-keys.md  008-crate-architecture.md  009-configuration.md  009-edge-caching.md  rfc-001.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  oidc.rs  sts.rs
crates/libs/api/: Cargo.toml
crates/libs/api/src/: api.rs  resolver.rs
crates/libs/auth/: Cargo.toml  README.md
crates/libs/auth/src/: jwks.rs  lib.rs  sts.rs
crates/libs/core/: Cargo.toml  README.md
crates/libs/core/src/: auth.rs  axum.rs  backend.rs  error.rs  lib.rs  maybe_send.rs  oidc_backend.rs  proxy.rs  resolver.rs  response_body.rs  sealed_token.rs  stream.rs  types.rs
crates/libs/core/src/config/: cached.rs  dynamodb.rs  http.rs  mod.rs  postgres.rs  static_file.rs
crates/libs/core/src/s3/: list_rewrite.rs  mod.rs  pagination.rs  request.rs  response.rs
crates/libs/oidc-provider/: Cargo.toml
crates/libs/oidc-provider/src/: backend_auth.rs  cache.rs  discovery.rs  jwks.rs  jwt.rs  lib.rs
crates/libs/oidc-provider/src/exchange/: aws.rs  azure.rs  gcp.rs  mod.rs
crates/libs/source-coop/: Cargo.toml
crates/libs/source-coop/src/: api.rs  lib.rs  resolver.rs
crates/libs/sts/: Cargo.toml  README.md
crates/libs/sts/src/: jwks.rs  lib.rs  request.rs  responses.rs  sts.rs
crates/runtimes/cf-workers/: Cargo.toml  README.md  wrangler.toml
crates/runtimes/cf-workers/src/: body.rs  client.rs  fetch_connector.rs  lib.rs  source_api.rs  source_resolver.rs  tracing_layer.rs
crates/runtimes/server/: Cargo.toml  README.md
crates/runtimes/server/src/: body.rs  client.rs  lib.rs  server.rs
deploy/: ADOT_SETUP.md  ECS_SETUP.md  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
deploy/lib/: adot-collector.ts  data-proxy-stack.ts  source-data-proxy.ts  update.py  vercel-api-proxy.ts
docs/: book.toml  index.md  package-lock.json  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts  config.ts
docs/.vitepress/theme/: custom.css  style.css
docs/adrs/: 001-s3-credentials.md  003-rust.md  007-configuration.md  rfc-001.md
docs/architecture/: crate-layout.md  index.md  multi-runtime.md  request-lifecycle.md
docs/auth/: backend-auth.md  index.md  proxy-auth.md  sealed-tokens.md
docs/configuration/: buckets.md  credentials.md  index.md  roles.md
docs/configuration/providers/: cached.md  dynamodb.md  http.md  index.md  postgres.md  static-file.md
docs/deployment/: cloudflare-workers.md  index.md  server.md
docs/extending/: custom-backend.md  custom-provider.md  custom-resolver.md  index.md
docs/getting-started/: index.md  local-development.md
docs/guide/: authentication.md  client-usage.md  endpoints.md  index.md
docs/plans/: 2026-03-16-read-only-proxy-design.md  2026-03-22-sts-token-exchange-design.md
docs/reference/: config-example.md  errors.md  index.md  operations.md
docs/src/: SUMMARY.md
docs/src/adrs/: 002-runtimes.md  005-authorization.md
scripts/: build-push.sh  deploy.sh  run.sh  tag-release.sh  task_definition.json
src/: analytics.rs  auth.rs  authz.rs  backend_auth.rs  cache.rs  cache_control.rs  chunk_cache.rs  config.rs  federation_test.rs  fetch_connector.rs  handlers.rs  lib.rs  location.rs  main.rs  noop_creds.rs  object_path.rs  pagination.rs  redirect.rs  registry.rs  routing.rs  source_api.rs  sts.rs  sts_cache.rs  tracing_layer.rs  worker_backend.rs  worker_infra.rs
src/apis/: mod.rs  source.rs
src/apis/source/: mod.rs  types.rs
src/backends/: azure.rs  common.rs  s3.rs
src/clients/: azure.rs  common.rs  mod.rs  s3.rs
src/guards/: mod.rs
src/route_handlers/: mod.rs  query_params.rs
src/source_api/: auth.rs  cache.rs  mod.rs  registry.rs  types.rs
src/utils/: apache_logger.rs  api.rs  auth.rs  context.rs  core.rs  errors.rs  mod.rs  repository.rs  telemetry.rs  tracing_middleware.rs
tests/: analytics.rs  authz.rs  backend_auth.rs  cache_control.rs  chunk_cache.rs  conftest.py  fixtures.rs  multipart.rs  object_path.rs  pagination.rs  redirect.rs  routing.rs  sts.rs  sts_cache.rs  stub_api.py  test_contract.py  test_control_plane.py  test_federation.py  test_integration.py  test_writes.py
tests/fixtures/: data_connection.json  data_connection_write_probe.json  product.json  product_restricted.json  product_write_probe.json
workers/location-ws/: package-lock.json  package.json  wrangler.toml
workers/location-ws/src/: location-hub.ts
workers/public-log-stream/: package-lock.json  package.json  tsconfig.json  wrangler.preview.toml  wrangler.toml
workers/public-log-stream/src/: aggregate.mjs  aggregate.test.mjs  index.ts  location-hub.ts
