[package]
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
edition = "2021"
name = "source-data-proxy"
version = "2.1.2"

[lib]
crate-type = ["cdylib"]
# The cdylib depends on wasm-only crates (worker, wasm-bindgen, web-sys)
# that don't compile on native targets, so we disable `cargo test` for the lib.
test = false

[[test]]
name = "routing"
path = "tests/routing.rs"

[[test]]
name = "pagination"
path = "tests/pagination.rs"

[[test]]
name = "backend_auth"
path = "tests/backend_auth.rs"

[dependencies]
# Multistore
multistore = { version = "0.6.0", features = ["azure"] }
multistore-oidc-provider = { version = "0.6.0" }
multistore-path-mapping = { version = "0.6.0" }
multistore-sts = { version = "0.6.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
http = "1"
percent-encoding = "2"

# Tracing
tracing = "0.1"

# Wasm-only dependencies (Cloudflare Workers runtime)
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Pulled in transitively via object_store -> rand. getrandom doesn't support
# wasm32-unknown-unknown unless the `wasm_js` backend is enabled, so opt in here.
getrandom = { version = "0.4", features = ["wasm_js"] }
multistore-cf-workers = { version = "0.6.0", features = ["azure"] }
# On wasm32-unknown-unknown reqwest selects its browser `fetch` backend by
# target arch (not a cargo feature), so the default TLS/backend features are
# unnecessary here. We only use `Client::new()`, `.send()` and `.text()`, none
# of which are feature-gated -- so no explicit feature list is required.
reqwest = { version = "0.12", default-features = false }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Headers",
  "ReadableStream",
  "Request",
  "RequestInit",
  "Response",
  "ResponseInit",
] }
worker = { version = "=0.7.4", features = ["http"] }
worker-macros = { version = "=0.7.4", features = ["http"] }

# multistore-cf-workers 0.6.0 is not on crates.io, so all multistore crates are
# pinned to the v0.6.0 git tag to keep `multistore` single-sourced: a git
# cf-workers alongside registry crates would pull two copies of `multistore`
# and fail to compile. Remove this block once multistore-cf-workers 0.6.0
# publishes and the version deps above resolve from crates.io.
[patch.crates-io]
multistore = { git = "https://github.com/developmentseed/multistore", tag = "v0.6.0" }
multistore-oidc-provider = { git = "https://github.com/developmentseed/multistore", tag = "v0.6.0" }
multistore-path-mapping = { git = "https://github.com/developmentseed/multistore", tag = "v0.6.0" }
multistore-sts = { git = "https://github.com/developmentseed/multistore", tag = "v0.6.0" }
multistore-cf-workers = { git = "https://github.com/developmentseed/multistore", tag = "v0.6.0" }
