[package]
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
edition = "2021"
name = "source-data-proxy"
version = "2.2.0"

[lib]
crate-type = ["cdylib"]
# The cdylib depends on wasm-only crates (worker, wasm-bindgen, web-sys)
# that don't compile on native targets, so we disable `cargo test` for the lib.
test = false

[[test]]
name = "routing"
path = "tests/routing.rs"

[[test]]
name = "pagination"
path = "tests/pagination.rs"

[[test]]
name = "backend_auth"
path = "tests/backend_auth.rs"

[[test]]
name = "authz"
path = "tests/authz.rs"

[[test]]
name = "object_path"
path = "tests/object_path.rs"

[[test]]
name = "multipart"
path = "tests/multipart.rs"

[dependencies]
# Multistore
multistore = { version = "0.6.4", features = ["azure"] }
multistore-oidc-provider = "0.6.4"
multistore-path-mapping = "0.6.4"
multistore-sts = "0.6.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
http = "1"
percent-encoding = "2"

# Hashing (HMAC-SHA256 client-IP hashing for analytics privacy)
hmac = "0.12"
sha2 = "0.10"

# Tracing
tracing = "0.1"

# Wasm-only dependencies (Cloudflare Workers runtime)
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Pulled in transitively via object_store -> rand. getrandom doesn't support
# wasm32-unknown-unknown unless the `wasm_js` backend is enabled, so opt in here.
getrandom = { version = "0.4", features = ["wasm_js"] }
multistore-cf-workers = { version = "0.6.4", features = ["azure"] }
# On wasm32-unknown-unknown reqwest selects its browser `fetch` backend by
# target arch (not a cargo feature), so the default TLS/backend features are
# unnecessary here. We only use `Client::new()`, `.send()` and `.text()`, none
# of which are feature-gated -- so no explicit feature list is required.
reqwest = { version = "0.12", default-features = false }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Headers",
  "ReadableStream",
  "Request",
  "RequestInit",
  "Response",
  "ResponseInit",
] }
worker = { version = "=0.7.4", features = ["http"] }
worker-macros = { version = "=0.7.4", features = ["http"] }
