[package]
name = "source-coop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Source Cooperative — OIDC login and STS credential exchange"

[[bin]]
name = "source-coop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
open = "5"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
quick-xml = { workspace = true }
chrono = { workspace = true }
dirs = "6"

[features]
default = ["production"]
production = []
staging = []
