[package]
name = "source-coop-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source Cooperative API client and request resolver for the S3 proxy gateway"

[dependencies]
source-coop-core.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
url.workspace = true
tracing.workspace = true
