[package]
name = "source-coop-oidc-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OIDC provider for outbound authentication — JWT signing, JWKS serving, and cloud credential exchange"

[features]
default = []
azure = []
gcp = []

[dependencies]
source-coop-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
rsa.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
rand = "0.8"
