[package]
name = "s3-proxy-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio/Hyper runtime for the S3 proxy gateway"

[dependencies]
s3-proxy-core = { workspace = true, features = ["azure", "gcp"] }
s3-proxy-sts.workspace = true
s3-proxy-source-coop.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
object_store.workspace = true
futures.workspace = true
