[package]
name = "source-coop-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio/Hyper runtime for the S3 proxy gateway"

[dependencies]
source-coop-core = { workspace = true, features = ["axum", "azure", "gcp"] }
source-coop-sts.workspace = true
source-coop-oidc-provider.workspace = true
source-coop-api.workspace = true
axum = { workspace = true, features = ["json", "tokio", "http1", "http2"] }
tower-service.workspace = true
tokio.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
object_store.workspace = true
futures.workspace = true
http-body-util.workspace = true
